2002-01-02  Arturo Espinosa Aldama  <arturo@ximian.com>

	* replace.pl.in (xst_replace_split): minor indentation.

2002-01-02  Tambet Ingo  <tambet@ximian.com>

	* xml.pl.in (xst_xml_scan_make_kid_array): Single quote (') can be used
	as an xml attribute enclosing symbol as well.

2001-12-20  Tambet Ingo  <tambet@ximian.com>

	* service.pl.in (xst_service_sysv_remove_link): Close dir also after
	opening it.
	(xst_service_sysv_set_links_active): Use stricter regexps to remove
	only service we need (xfs vs xfstt).
	(xst_service_sysv_set_links_inactive): Ditto.
	(xst_service_sysv_restart): Actually see what parameters got passed and
	use them. doh!

	* font.pl.in (xfs_reload): Use more compatible way to restart xfs.
	(x_font_set): Restart xfs only when needed.

2001-12-19  Tambet Ingo  <tambet@ximian.com>

	* shares-conf.in (get_installed_tools): Implement.
	(xml_print): Print tools.

2001-12-19  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in (xst_network_get_replace_table): Use the
	new keyword for SuSE's suseconfig run.
	(xst_network_get_interface_parse_table): Back to editting
	/etc/sysconfig/network-scripts. :)

	* replace.pl.in (xst_replace_run_entry): New "_always_" key
	forces call of the function.
	(xst_replace_from_table): same.

2001-12-18  Arturo Espinosa Aldama  <arturo@ximian.com>

	* platform.pl.in (check_debian): Correctly detect woody, which
	is now officialy 3.0.

2001-12-17  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network-conf.in: Added rh72 back to supported list.

	* replace.pl.in (xst_replace_join_hash): Delete entries missing
	in the hash found in the old file. Fixes #16329

	* network.pl.in (xst_network_debian_woody_get_auto): Hmm... this
	should return 1/0. Fixes #12983

2001-12-16  Chema Celorio  <chema@celorio.com>

	* network-conf.in: remove rh 7.2 from supported list

	* configure.in (dnl): bump version to 0.11.0

2001-12-14  Arturo Espinosa Aldama  <arturo@ximian.com>
